--- a/css/style.css
+++ b/css/style.css
@@ -8,21 +8,21 @@
 @font-face {
     font-family: "Museo Sans";
     src: url("../fonts/MuseoSansCyrl-500.woff2") format("woff2"),
-    url("../fonts/MuseoSansCyrl-500.woff") format("woff");
+        url("../fonts/MuseoSansCyrl-500.woff") format("woff");
     font-weight: 500;
 }
 
 @font-face {
     font-family: "Museo Sans";
     src: url("../fonts/MuseoSansCyrl-700.woff2") format("woff2"),
-    url("../fonts/MuseoSansCyrl-700.woff") format("woff");
+        url("../fonts/MuseoSansCyrl-700.woff") format("woff");
     font-weight: 700;
 }
 
 @font-face {
     font-family: "Museo Sans";
     src: url("../fonts/MuseoSansCyrl-900.woff2") format("woff2"),
-    url("../fonts/MuseoSansCyrl-900.woff") format("woff");
+        url("../fonts/MuseoSansCyrl-900.woff") format("woff");
     font-weight: 900;
 }
 
@@ -294,7 +294,8 @@ p {
     padding-left: 30px;
 }
 
-.left-menu__list i.fa {
+.left-menu__list i.fa,
+.left-menu__list i.fas {
     font-size: 25px;
     padding: 10px;
     width: 50px;
@@ -341,7 +342,7 @@ p {
     position: relative;
 }
 
-.active + .dropdown-list {
+.active+.dropdown-list {
     width: 100%;
     height: auto;
     line-height: 30px;
@@ -351,11 +352,11 @@ p {
 
 }
 
-.hide + .dropdown-list {
+.hide+.dropdown-list {
     height: 0;
 }
 
-.active + .dropdown-list:hover {
+.active+.dropdown-list:hover {
     background: #00bcd6;
 }
 
@@ -363,6 +364,10 @@ p {
     width: 0;
     height: 0;
     overflow: hidden;
+}
+
+.dropdown-list a {
+    cursor: pointer;
 }
 
 .dropdown:before {
@@ -387,7 +392,7 @@ p {
 
 }
 
-.left-menu:not(.openMenu) li > .dropdown-list {
+.left-menu:not(.openMenu) li>.dropdown-list {
     pointer-events: none;
     height: 0;
 }
@@ -535,6 +540,80 @@ main {
     width: 185px;
 }
 
+.pagination {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.pagination__list {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.pagination__item {
+    margin-right: 10px;
+    margin-bottom: 10px;
+}
+
+.pagination__item:last-child {
+    margin-right: 0;
+}
+
+.pagination__link,
+.pagination__button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    text-decoration: none;
+    width: 44px;
+    height: 44px;
+    font-size: 16px;
+    line-height: 24px;
+    color: #000;
+    background-color: #fff;
+    border: 1px solid #00838f;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: 0.2s;
+}
+
+
+.pagination__link:hover,
+.pagination__button:hover {
+    color: #ffc107;
+    border-color: #ffc107;
+    transition: 0.2s;
+}
+
+.pagination__link--current,
+.pagination__link:focus,
+.pagination__button:focus {
+    color: #ffc107;
+    background-color: #00838f;
+    border-color: #00838f;
+    transition: 0.2s;
+}
+
+.pagination__link--disabled,
+.pagination__link:disabled,
+.pagination__button:disabled {
+    color: #ccc;
+    background-color: #fff;
+    border-color: #ccc;
+    cursor: default;
+}
+
+.pagination__button {
+    color: #00838f;
+}
+
 .modal {
     position: fixed;
     top: 0;
@@ -556,17 +635,17 @@ main {
 .modal__content {
     border: 32px solid #00838f;
     position: relative;
-	min-width: 600px;
+    min-width: 600px;
     max-width: 800px;
     min-height: 400px;
-	max-height: 550px;
+    max-height: 550px;
     padding: 35px 50px 35px 150px;
     background-color: #fff;
     font-size: 14px;
     line-height: 1.2;
     font-weight: 400;
     color: #030303;
-	margin: 0 200px;
+    margin: 0 200px;
 }
 
 .modal__content h2 {
@@ -580,8 +659,8 @@ main {
 }
 
 .modal__description {
-	overflow-y: auto;
-	max-height: 400px;
+    overflow-y: auto;
+    max-height: 400px;
 }
 
 .modal__description section {
@@ -700,10 +779,10 @@ main {
         padding: 0 60px;
     }
 
-	.cross {
-		top: 0;
-		right: 0;
-	}
+    .cross {
+        top: 0;
+        right: 0;
+    }
 }
 
 @media (max-width: 794px) {
@@ -721,26 +800,39 @@ main {
         justify-content: space-around;
     }
 
-	.image__content {
-		position: static;
-		margin: 0 auto;
-	}
+    .image__content {
+        position: static;
+        margin: 0 auto;
+    }
 
-	.modal__content {
-		overflow-y: auto;
-		max-height: 400px;
-		padding: 30px;
-		border-width: 16px;
-	}
+    .pagination__item:last-child {
+        margin-right: 6px;
+        margin-bottom: 6px;
+    }
 
-	.modal__description {
-		overflow-y: visible;
-		max-height: none;
-	}
+    .pagination__link,
+    .pagination__button {
+        width: 36px;
+        height: 36px;
+        font-size: 14px;
+        line-height: 20px;
+    }
 
-	.modal__content h2 {
-		margin-top: 15px;
-	}
+    .modal__content {
+        overflow-y: auto;
+        max-height: 400px;
+        padding: 30px;
+        border-width: 16px;
+    }
+
+    .modal__description {
+        overflow-y: visible;
+        max-height: none;
+    }
+
+    .modal__content h2 {
+        margin-top: 15px;
+    }
 }
 
 @media (max-width: 655px) {
@@ -753,10 +845,10 @@ main {
         margin: 0 auto;
     }
 
-	.modal__content {
-		min-width: 320px;
-		width: 100%;
-	}
+    .modal__content {
+        min-width: 320px;
+        width: 100%;
+    }
 
 
 }
@@ -1095,16 +1187,20 @@ main {
         -webkit-transform: rotate(-30deg) scale(1);
         transform: rotate(-30deg) scale(1);
     }
+
     50% {
         -webkit-transform: rotate(360deg) scale(4);
         transform: rotate(360deg) scale(4);
         background-color: white;
     }
+
     80% {
         -webkit-transform: rotate(720deg) scale(0.8);
         transform: rotate(720deg) scale(0.8);
     }
-    90%, 100% {
+
+    90%,
+    100% {
         -webkit-transform: rotate(720deg) scale(1);
         transform: rotate(720deg) scale(1);
         background-color: #ffc107;
@@ -1116,23 +1212,28 @@ main {
         -webkit-transform: rotate(-30deg) scale(1);
         transform: rotate(-30deg) scale(1);
     }
+
     50% {
         -webkit-transform: rotate(360deg) scale(4);
         transform: rotate(360deg) scale(4);
         background-color: white;
     }
+
     80% {
         -webkit-transform: rotate(720deg) scale(0.8);
         transform: rotate(720deg) scale(0.8);
     }
-    90%, 100% {
+
+    90%,
+    100% {
         -webkit-transform: rotate(720deg) scale(1);
         transform: rotate(720deg) scale(1);
         background-color: #ffc107;
     }
 }
 
-.loading:before, .loading:after {
+.loading:before,
+.loading:after {
     content: "";
     position: absolute;
     width: 100%;
@@ -1155,7 +1256,9 @@ main {
         transform: translate(-200%, -100%) scale(0.2) rotate(-180deg);
         background-color: white;
     }
-    70%, 100% {
+
+    70%,
+    100% {
         -webkit-transform: translate(0, 0) scale(1) rotate(-360deg);
         transform: translate(0, 0) scale(1) rotate(-360deg);
         background-color: #00838f;
@@ -1168,7 +1271,9 @@ main {
         transform: translate(-200%, -100%) scale(0.2) rotate(-180deg);
         background-color: white;
     }
-    70%, 100% {
+
+    70%,
+    100% {
         -webkit-transform: translate(0, 0) scale(1) rotate(-360deg);
         transform: translate(0, 0) scale(1) rotate(-360deg);
         background-color: #00838f;
@@ -1189,7 +1294,9 @@ div:after {
         transform: translate(200%, 100%) scale(0.2) rotate(180deg);
         background-color: white;
     }
-    70%, 100% {
+
+    70%,
+    100% {
         -webkit-transform: translate(0, 0) scale(1) rotate(360deg);
         transform: translate(0, 0) scale(1) rotate(360deg);
         background-color: #ffc107;
@@ -1202,7 +1309,9 @@ div:after {
         transform: translate(200%, 100%) scale(0.2) rotate(180deg);
         background-color: white;
     }
-    70%, 100% {
+
+    70%,
+    100% {
         -webkit-transform: translate(0, 0) scale(1) rotate(360deg);
         transform: translate(0, 0) scale(1) rotate(360deg);
         background-color: #00838f;
